--- a/Help/ChangeLog
+++ b/Help/ChangeLog
@@ -1,5 +1,13 @@
 Lithium - A Battery Status Monitor Applet for the ROX Panel
 
+2006-08-09 Ken Hayber <ken@hayber.us>
+005
+	* Add theme switching code
+	* Add new themes
+	* Reduce gradations in the themes
+	* Add charge level icon display while charging
+	* Minor fixes
+
 2006-01-26
 004
 	* Fix for incorrect charge level on acpi (Thomas Leonard)
