--- a/Help/README
+++ b/Help/README
@@ -8,15 +8,8 @@ It is based on Baroque 0.5.1, by Rds and Tilo Riemer.
 
 ICONS
 ~~~~~
-The default icon set is Horizontal in orientation and is stored in the 'images'
-directory.  There are two alternate sets provided if you do not like this look.
-
-If you replace 'images' with 'images-v', you will get the same set of icons but
-Vertically oriented.  This may look nicer in Vertical Panels.  There is a 3rd
-(older) set that are PNG files instead of SVG (for those that don't like or have
-support for SVG).  These are only Vertical, but are easily converted using GIMP
-or other bitmap tools.  Since these are PNG, the battery.py file will need to be
-edited to replace the string "+'.svg'" with "+'.png'".
+There are some provided themes (easily replaceable).  Most were created by me,
+except for Tango which is taken from the GNOME PowerManager applet.
 
 Feel free to make your own icons if mine don't suit your tastes.
 
