--- a/Help/ChangeLog
+++ b/Help/ChangeLog
@@ -1,5 +1,9 @@
 Lithium - A Battery Status Monitor Applet for the ROX Panel
-
+2007-03-25 Ken Hayber <ken@hayber.us>
+	* Revert acpi.py change (don't use design capacity, it doesn't reflect
+	degradation in lifetime of the battery)
+	* Attach notification popup to the widget.
+	
 2006-12-15 Ken Hayber <ken@hayber.us>
 	* Combine charge level and status in one tooltip (don't switch back
 	and forth)
